<resources>
    <string name="app_name">Fun Time</string>

    <string name="adnumber">3</string>
   <!-- <string name="banneraplacementid">2678394265754280_2678395859087454</string>
    <string name="intertitialaplacementid">2678394265754280_2678398165753890</string>
    <string name="nativeadplacement">2678394265754280_2678398629087177</string>
-->
    <string name="msg_bingo">Congratulation!!!!</string>
    <string name="title_warning">Warning</string>
    <string name="msg_restart">Do you restart?</string>
    <string name="btn_ok">OK</string>
    <string name="btn_no">No</string>

    <string name="action_restart">Restart</string>
    <string name="action_undo">Undo</string>

    <string name="label_center">Center</string>
    <string name="howtoplay_shapes">How To Play</string>

    <string name="NEXT">NEXT</string>
    <string name="GOT_IT">GOT IT</string>
    <string name="hello_lucky">Hi Lucky</string>
    <string name="Public">Public</string>
    <string name="free">Free</string>
    <string name="Private">Private</string>
    <string name="lets_start_your_today_s_training">Play and Earn Real Money. Enjoy the game.</string>

    <string name="maths_is_very_useful_and_everyday_maths_is_all_around_you">Maths is very useful and everyday maths is all around you</string>
    <string name="chemistry_is_the_complex_emotional_or_psychological_interaction_between_people">Chemistry is the complex emotional or psychological interaction between people</string>
    <string name="one_of_the_most_fundamental_scientific_disciplines_and_its_main_goal_is_to_understand_how_the_universe_behaves">One of the most fundamental scientific disciplines, and its main goal is to understand how the universe behaves</string>
    <string name="fine_your_recently_learned_topics">fine_your_recently_learned_topics</string>
    <string name="natural_science_that_studies_life_and_living_organisms_including_their_physical_structure_chemical_processes_molecular_interactions_physiological_mechanisms_development_and_evolution">natural_science_that_studies_life_and_living_organisms_including_their_physical_structure_chemical_processes_molecular_interactions_physiological_mechanisms_development_and_evolution</string>
    <string name="Mygameshistory">My Game History</string>
    <string name="check_internet_connection">Please Check Your Internet Connection.</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="msg_subscribe_failed">Failed to subscribe to App</string>
    <string name="msg_subscribed">Subscribed to App</string>

    <string name="hours">  Hours  </string>
    <string name="minutes"> Minutes </string>
    <string name="seconds"> Seconds </string>
    <string name="days">  Days  </string>
    <string name="HIDE">Hide</string>
    <string name="SAVE">Savw</string>


    <string name="default_icon_value" translatable="false">ic_notifications_white_24dp</string>
    <string name="date_today">Today</string>
    <string name="default_colour_value" translatable="false">#8e8e8e</string>
    <string name="sign_in">Sign In</string>
    <string name="referId">Refer ID</string>
    <string name="referIdText">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 The Referral ID is very important feature. Each affiliate has his/her unique ID generated by FunTime which is called Referal ID (or Affiliate ID). </string>
    <string name="referIdtext">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 Share the Fun Time love and give friends FREE Coins to try Fun Time Game, worth up to 75 FREE Coins each!</string>

    <string name="startapp_id">208256941</string>
    <!--<string name="startapp_id">201613007</string>-->


    <string-array name="icons_string_array" translatable="false">
        <item>ic_notifications_white_24dp</item>
    </string-array>


    <integer-array name="int_colours_array">
        <item>-13663817</item>

    </integer-array>

</resources>
