<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">




    <LinearLayout
        android:layout_above="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:background="@drawable/settingsbg"
            >

            <ImageView
                android:id="@+id/selecedloanimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/connector_bg"
                android:layout_centerInParent="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:textColor="@color/white"

                android:textSize="25sp"
                android:text="Refer To Your Friends"
                android:id="@+id/tv_Loan"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:orientation="horizontal"

                android:id="@+id/ll_adMain">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/ic_adBack">
                    <ImageView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:src="@drawable/back"
                        android:tint="@color/white"

                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:visibility="invisible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        style="@android:style/TextAppearance.Medium"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2">
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="25dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/referId"
                        android:textColor="@color/theme_color1"
                        android:layout_weight="0.6"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:id="@+id/tv_ReferalId"
                        style="@android:style/TextAppearance.Medium"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/referIdText"
                        android:textColor="@color/theme_color1"
                        style="@android:style/TextAppearance.Medium"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/referIdtext"
                        android:textColor="@color/theme_color1"
                        android:layout_marginTop="15dp"
                        android:id="@+id/tv_ReferalId1"
                        style="@android:style/TextAppearance.Medium"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Share Your Invite Code"
                    android:layout_marginBottom="25dp"
                    android:textColor="@color/white"
                    android:id="@+id/sharecode"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:background="@drawable/wallet_image2"
                    android:foreground="?selectableItemBackgroundBorderless"
                    />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <com.startapp.sdk.ads.banner.Banner
        android:layout_alignParentBottom="true"
        android:id="@+id/banner_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:visibility="visible" />
   <!-- <LinearLayout

        android:layout_alignParentBottom="true"
        android:id="@+id/banner_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:visibility="visible"
        />
-->
</RelativeLayout>